@@ -20,6 +20,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - new "sched_version" server attribute
   f - new printserverdb tool
   e - pbs_server/pbs_mom hostname arg is now -H, -h is help
+  e - added $umask to pbs_mom config, used for generated output files.
 
 2.2.1
   b - fix a bug where dependent jobs get put on hold when the previous job has
